overflow fix

--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -2,6 +2,7 @@
     background-image: url("~/public/watercolor.jpg");
     background-size: cover;
     background-attachment:fixed;
+    overflow-x:hidden;
   }
 
 .first-title {
